--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,14 @@ img {
     SOLUZIONE RESPONSIVE
  ************************************************/
 
+@media screen and (min-width:769px) and (max-width:1160px) {
+    .container {
+        width: 90%;
+        max-width: 1160px;
+    }
+}
+
+ 
 @media screen and (max-width:768px) {
     .container {
         max-width: 768px;
